--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="184dp"
         android:layout_marginEnd="72dp"
         android:layout_marginRight="72dp"
-        android:onClick="changeLanguage"
+        android:onClick="showChangeLanguageRadio"
         android:text="@string/changeLang"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -28,4 +28,39 @@
         android:text="@string/startButton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+    <RadioGroup
+        android:id="@+id/radioGroupForLangSelection"
+        android:layout_width="104dp"
+        android:layout_height="182dp"
+        android:layout_marginTop="244dp"
+        android:layout_marginEnd="72dp"
+        android:layout_marginRight="72dp"
+        android:measureWithLargestChild="true"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+
+        <RadioButton
+            android:id="@+id/langChoiceEn"
+            android:layout_width="94dp"
+            android:layout_height="wrap_content"
+            android:text="@string/english" />
+
+        <RadioButton
+            android:id="@+id/langChoicePl"
+            android:layout_width="95dp"
+            android:layout_height="wrap_content"
+            android:text="@string/polish" />
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@string/accept"
+            android:onClick="changeLanguage"/>
+    </RadioGroup>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
