--- a/app/src/main/res/layout/activity_hero_setup.xml
+++ b/app/src/main/res/layout/activity_hero_setup.xml
@@ -11,5 +11,11 @@
         android:layout_height="wrap_content"
         android:theme="@style/Theme.Runebound3Coin.AppBarOverlay"/>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/playerRecView"
+        />
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
