--- a/app/src/main/res/layout/activity_hero_selection.xml
+++ b/app/src/main/res/layout/activity_hero_selection.xml
@@ -7,6 +7,7 @@
     tools:context=".gameFlow.heroSetup.heroSelection.HeroSelectionActivity">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/hero_selection_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:layout_editor_absoluteX="138dp"
